--- a/src/content/posts/translations/Arbrethil-social-interactions-1.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-1.mdx
@@ -26,7 +26,9 @@ author: Arbrethil
 
 В течение всего обучения в колледже я участвовал в национальных соревнованиях по дебатам и, конечно, не раз задумывался над искусством риторики и убеждения, и считаю верным обычное мнение о том, что дебаты, как правило, не особенно убеждают, когда речь идет о том, чтобы изменить мнение людей. Исключение, конечно, составляют темы, по которым мнение еще не сформировано, - в этом случае убедительные аргументы могут быть весьма убедительными. Но в целом люди устроены по-своему, и их мнение трудно изменить.
 
-Французский философ Блез Паскаль мудро писал: "Когда мы хотим исправить с пользой для себя и показать другому, что он заблуждается, мы должны заметить, с какой стороны он смотрит на дело, ибо с этой стороны оно обычно истинно, и признать за ним эту истину, но открыть ему ту сторону, с которой оно ложно. Это его устраивает, так как он видит, что не ошибся, а только не увидел всех сторон... Как правило, людей лучше убеждают те причины, которые они обнаружили сами, чем те, которые пришли в голову другим". Настоящее убеждение заключается в том, чтобы сформулировать вопросы так, чтобы они согласовывались с тем, во что люди уже верят, и показать, как то, что кто-то уже считает истинным, естественным образом предполагает другую позицию.
+Французский философ Блез Паскаль мудро писал: 
+
+> "Когда мы хотим исправить с пользой для себя и показать другому, что он заблуждается, мы должны заметить, с какой стороны он смотрит на дело, ибо с этой стороны оно обычно истинно, и признать за ним эту истину, но открыть ему ту сторону, с которой оно ложно. Это его устраивает, так как он видит, что не ошибся, а только не увидел всех сторон... Как правило, людей лучше убеждают те причины, которые они обнаружили сами, чем те, которые пришли в голову другим". Настоящее убеждение заключается в том, чтобы сформулировать вопросы так, чтобы они согласовывались с тем, во что люди уже верят, и показать, как то, что кто-то уже считает истинным, естественным образом предполагает другую позицию.
 
 Таким образом, очень важно понимать, что убеждение в большей степени зависит от человека, которого убеждают, чем от обоснованности представленных аргументов. Аналогичным образом, та или иная попытка в значительной степени зависит от того, насколько восприимчива к ней цель. Это не значит, что сила попытки не имеет значения - плохая попытка может оказаться неудачной даже при правильных призывах, - но обстоятельства и мнения объекта являются принципиально необходимыми компонентами для реальной имитации взаимодействия.
 
@@ -59,7 +61,7 @@ author: Arbrethil
 
 ![Image](https://cyborgsandmages.com/images/arberthil-social-interactions-1-2.jpg) 
 
-Аналогично, рассмотрим броски лояльности. В AD&D 1e DMG есть обширная таблица модификаторов лояльности для приспешников - поправки зависят от характера отношений, их продолжительности, степени подготовки приспешника, размера получаемого вознаграждения, обращения, расовых предпочтений приспешника и его Мировоззрения и т.д. Существует также бонус к харизме и Мировоззрению нанимателя. Однако в целом харизма нанимателя отнюдь не является доминирующим фактором - максимальный бонус к харизме составляет +40 к d%. Для сравнения: простое пребывание в качестве приспешника дает +35% Лояльности. Присутствие сеньора дает +15%, и еще +5% за каждого живого приспешника в пределах видимости - при таком раскладе мои игроки, даже считая приспешников одного сеньора, который дает всем приспешникам Лояльность, легко получают +70% при погружении, даже не учитывая лечение, подарки магических предметов и тому подобное.
+Аналогично, рассмотрим броски лояльности. В **AD&D 1e DMG** есть обширная таблица модификаторов лояльности для приспешников - поправки зависят от характера отношений, их продолжительности, степени подготовки приспешника, размера получаемого вознаграждения, обращения, расовых предпочтений приспешника и его Мировоззрения и т.д. Существует также бонус к харизме и Мировоззрению нанимателя. Однако в целом харизма нанимателя отнюдь не является доминирующим фактором - максимальный бонус к харизме составляет +40 к d%. Для сравнения: простое пребывание в качестве приспешника дает +35% Лояльности. Присутствие сеньора дает +15%, и еще +5% за каждого живого приспешника в пределах видимости - при таком раскладе мои игроки, даже считая приспешников одного сеньора, который дает всем приспешникам Лояльность, легко получают +70% при погружении, даже не учитывая лечение, подарки магических предметов и тому подобное.
 
 То, что косвенные модификаторы и выбор подхода преобладают, на мой взгляд, хорошо для игры. Когда врожденная статистика и способности персонажа оказывают большее влияние на исход, чем детали текущих обстоятельств, то для мастерства игрока остается мало места. И наоборот, когда модификаторы обстоятельств оказываются важнее статистики персонажа, появляется большой простор для искусной игры, позволяющей совершать благоприятные маневры, а игра в целом становится более сложной и динамичной. Лояльность приспешников, на которую влияет отношение к ним, напрямую связывает действия игрока с результатами игры и дает ему возможность больше влиять на развитие событий в мире. Это будет проще для тех, у кого высокий хар, как и должно быть, но игра выигрывает, когда есть возможность покрыть недостаток таланта игрока в разумных обстоятельствах - и, возможно, наибольшее удовольствие возникает, когда навыки игрока синергируют с талантом персонажа, позволяя достичь того, что иначе было бы невозможно.
 
