--- a/src/content/posts/translations/Arbrethil-social-interactions-2.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-2.mdx
@@ -38,7 +38,7 @@ author: Arbrethil
 
 В **D&D**, начиная с B/X и AD&D до 3.5e, реализован достаточно хороший пример этой схемы. Броски убеждения делаются по таблице результатов, что создает небинарные возможности. В D&D 3e это еще более усовершенствовано за счет индексации возможных результатов и трудностей в зависимости от текущего отношения цели к вам. К сожалению, после 3.5e эта возможность, похоже, была в значительной степени утрачена, и 5e возвращается к бинарным проверкам навыков.
 
-**Б/Х** бросает 2д6 вместо 1к20, что разумно взвешивает результаты в сторону центра, так что большинство людей реагируют разумно, а крайняя дружелюбность или враждебность в отсутствие модификаторов - редкость. ACKS делает еще один шаг вперед, позволяя взаимодействовать в несколько раундов и включая таблицы модификаторов обстоятельств, хотя и не позволяет интегрировать ценности и предпочтения отдельных персонажей (хотя я не уверен, что любая система делает это по умолчанию).
+**B/X** бросает 2д6 вместо 1к20, что разумно взвешивает результаты в сторону центра, так что большинство людей реагируют разумно, а крайняя дружелюбность или враждебность в отсутствие модификаторов - редкость. ACKS делает еще один шаг вперед, позволяя взаимодействовать в несколько раундов и включая таблицы модификаторов обстоятельств, хотя и не позволяет интегрировать ценности и предпочтения отдельных персонажей (хотя я не уверен, что любая система делает это по умолчанию).
 
 **AD&D** имеет неравномерный интервал между бросками d100, что, как ни странно, приводит к смещению результатов в сторону краев и делает сильные реакции более вероятными, чем умеренные.
 
@@ -56,11 +56,11 @@ author: Arbrethil
 
 **Примеры:** FATE, ASOIAF Roleplaying, FFG Star Wars, Legend of the Five Rings, Burning Wheel, Ascendant.
 
-FATE доводит эту парадигму до логического предела и рассматривает социальное взаимодействие точно так же, как и бой, с разными навыками, но в остальном идентичными во всех отношениях (за исключением того, что есть необязательные правила для добавления доспехов и оружия, которые здесь не имеют никакого соответствия). Как и все в FATE, в итоге все выглядит довольно шаблонно.
+**FATE** доводит эту парадигму до логического предела и рассматривает социальное взаимодействие точно так же, как и бой, с разными навыками, но в остальном идентичными во всех отношениях (за исключением того, что есть необязательные правила для добавления доспехов и оружия, которые здесь не имеют никакого соответствия). Как и все в FATE, в итоге все выглядит довольно шаблонно.
 
-ASOIAF Roleplaying и Burning Wheel лучше справляются с задачей сделать это интересным, хотя я думаю, что ASOIAF стал бы повторяться. Что касается "Горящего колеса", то, чтобы понять, как оно должно работать, группе придется повторяться, но, похоже, оно создает несколько интересных вариантов, хотя ему не мешало бы поучиться у En Garde тому, как заставлять игроков совершать телеграфные маневры, чтобы сделать игру более тактической, а не "камень-ножницы-бумага".
+**ASOIAF Roleplaying** и **Burning Wheel** лучше справляются с задачей сделать это интересным, хотя я думаю, что **ASOIAF** стал бы повторяться. Что касается **"Горящего колеса"**, то, чтобы понять, как оно должно работать, группе придется повторяться, но, похоже, оно создает несколько интересных вариантов, хотя ему не мешало бы поучиться у En Garde тому, как заставлять игроков совершать телеграфные маневры, чтобы сделать игру более тактической, а не "камень-ножницы-бумага".
 
-Legend of the Five Rings, Burning Wheel и Ascendant делают некоторые интересные вещи, чтобы смягчить проблемы истощения путем пересмотра взаимодействия, о чем речь пойдет ниже, но сначала стоит понять, почему истощение - это плохая модель социального взаимодействия.
+**Legend of the Five Rings**, **Burning Wheel** и **Ascendant** делают некоторые интересные вещи, чтобы смягчить проблемы истощения путем пересмотра взаимодействия, о чем речь пойдет ниже, но сначала стоит понять, почему истощение - это плохая модель социального взаимодействия.
 
 ## Проблема истощения
 
