--- a/src/content/posts/translations/Arbrethil-social-interactions-3.mdx
+++ b/src/content/posts/translations/Arbrethil-social-interactions-3.mdx
@@ -24,7 +24,7 @@ author: Arbrethil
 
 Персонаж, обученный какому-либо навыку в какой-либо ролевой игре, обычно становится лучше в этом навыке по мере роста его уровня и опыта. Тот, кто на 1-м уровне умеет ходить по натянутому канату, может продолжать развивать этот талант, пока на 20-м уровне не будет взбегать по стеклянным стенам или балансировать на облаках.
 
-Нужно только бросить КС 120...
+Нужно только пробросить КС 120...
 
 
 ![Image](https://cyborgsandmages.com/images/arberthil-social-interactions-3.jpg) 
