--- a/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
@@ -526,11 +526,11 @@ author: Антон "Palant" Палихов
 
 **Дистанция:** 30 футов
 
-**Компоненты:** V
+**Компоненты:** В
 
 **Длительность:** Мгновенно
 
-Вы издаете сильный вопль, наполненный энергией, уничтожающей жизнь. Каждое существо (кроме вас самих), которое слышит этот крик, должно сделать бросок на спасбросок по Спасброску Конституции или будет уменьшено до 0 хитов. При успешном спасброске или если существо является легендарным, оно получает 10к6 психического урона.
+Вы издаете сильный вопль, наполненный энергией, уничтожающей жизнь. Каждое существо (кроме вас самих), которое слышит этот крик, должно успешно совершить спасбросок Телосложения или его хиты будут уменьшены до 0 . При успешном спасброске или если существо является легендарным, оно получает 10к6 психического урона.
 
 ### Всплеск уклонения
 
@@ -540,7 +540,7 @@ author: Антон "Palant" Палихов
 
 **Дистанция:** На себя
 
-**Компоненты:** V
+**Компоненты:** В
 
 **Длительность:** Мгновенно
 
