--- a/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
@@ -820,7 +820,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты
 
-Личинки вгрызаются в плоть существа, к которому вы прикасаетесь. Когда вы произносите заклинание и в конце каждого своего хода во время действия заклинания, цель должна сделать Спасбросок на Конституцию или получить 10к4 некротического урона. При успешном спасброске существо получает вдвое меньше урона, и заклинание заканчивается. При успешном или неуспешном спасброске максимальное количество хит-пойнтов существа уменьшается на величину полученного некротического урона.
+Личинки вгрызаются в плоть существа, к которому вы прикасаетесь. Когда вы произносите заклинание и в конце каждого своего хода во время действия заклинания, цель должна успешно совершить спасбросок Телосложения или получить 10к4 некротического урона. При успешном спасброске существо получает вдвое меньше урона, и заклинание заканчивается. При успешном или неуспешном спасброске максимальное количество хитовсущества уменьшается на величину полученного некротического урона.
 
 **Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 4-го уровня или выше, некротический урон увеличивается на 2к4 за каждую ячейку уровня выше 3-го.
 
@@ -836,7 +836,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Мгновенно
 
-Вы запускаете болт холодной тьмы в существо, которое видите в пределах дистанции. Цель должна сделать спасбросок по Спасброску Конституции или получить 2к10 урона холодом и 2к10 некротического урона. При неудачном спасброске существо получает шок до конца вашего следующего хода. При успешном спасброске существо получает только урон от холода.
+Вы запускаете болт холодной тьмы в существо, которое видите в пределах дистанции. Цель должна успешно совершить спасбросок Телосложения или получить 2к10 урона холодом и 2к10 некротического урона. При неудачном спасброске существо получает шок до конца вашего следующего хода. При успешном спасброске существо получает только урон от холода.
 
 **Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 3-го уровня или выше, некротический урон увеличивается на 1к10 за каждую ячейку уровня выше 2-го.
 
