--- a/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
@@ -142,7 +142,7 @@ author: Антон "Palant" Палихов
 
 ### Аура жизненной силы
 
-3-й круг, призывание (лечение)
+3-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 действие.
 
@@ -894,7 +894,7 @@ author: Антон "Palant" Палихов
 
 ### Излечение
 
-6-й круг, призывание (лечение)
+6-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 действие.
 
@@ -960,7 +960,7 @@ author: Антон "Palant" Палихов
 
 ### Исцеление ран
 
-1-й круг, призывание (лечение)
+1-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 действие.
 
@@ -976,7 +976,7 @@ author: Антон "Palant" Палихов
 
 ### Исцеляющее слово
 
-1-й круг, призывание (лечение)
+1-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 бонусное действие.
 
@@ -992,7 +992,7 @@ author: Антон "Palant" Палихов
 
 ### Исцеляющий молебен
 
-2-й круг, призывание (лечение)
+2-й круг, некромантия (лечение)
 
 **Время сотворения:** 10 минут.
 
