--- a/src/content/creatures/purple-dragon-blade.mdx
+++ b/src/content/creatures/purple-dragon-blade.mdx
@@ -32,14 +32,14 @@ senses:
   perception: 12
 languages: общий, чондатанский
 features:
-  - name: **Воинская тренировка 1**
+  - name: Воинская тренировка 1
     description: Пурпурный дракон клинок получает бонус +1 к броскам атаки и КС боевых приемов
-  - name: **Снаряжение**
+  - name: Снаряжение
     description: чешуйчатый доспех, короткий меч, деревянный щит, легкий арбалет, колчан, 20 арбалетных болтов, кинжал
 actions:
-  - name: **Короткий меч**
+  - name: Короткий меч
     description: *Атака оружием ближнего боя*, +4 к попаданию, досягаемость 5 футов, одна цель. *Попадание* 4(1к6+1) колющего урона
-  - name: **Кинжал**
+  - name: Кинжал
     description: *Атака оружием ближнего боя*, +4 к попаданию, досягаемость 5 футов, одна цель. *Попадание* 3(1к4+1) колющего урона
 ---
 
