--- a/src/content/creatures/purple-dragon-blade.mdx
+++ b/src/content/creatures/purple-dragon-blade.mdx
@@ -38,20 +38,13 @@ features:
     description: чешуйчатый доспех, короткий меч, деревянный щит, легкий арбалет, колчан, 20 арбалетных болтов, кинжал
 actions:
   - name: Короткий меч
-    description: *Атака оружием ближнего боя*, +4 к попаданию, досягаемость 5 футов, одна цель. *Попадание* 4(1к6+1) колющего урона
+    description: Атака оружием ближнего боя*, +4 к попаданию, досягаемость 5 футов, одна цель. Попадание 4(1к6+1) колющего урона
   - name: Кинжал
-    description: *Атака оружием ближнего боя*, +4 к попаданию, досягаемость 5 футов, одна цель. *Попадание* 3(1к4+1) колющего урона
+    description: Атака оружием ближнего боя, +4 к попаданию, досягаемость 5 футов, одна цель. Попадание*3(1к4+1) колющего урона
 ---
 
-Description
+**Description**
 
 **Ecology**
 
 **Combat**
-
-**Goblinoids.** Goblins belong to a family of creatures called goblinoids. Their larger cousins, hobgoblins and bugbears, like to bully goblins into submission. Goblins are lazy and undisciplined, making them poor servants, laborers, and guards.
-Malicious Glee. Motivated by greed and malice, goblins can't help but celebrate the few times they have the upper hand. They dance, caper with sheer joy when victory is theirs. Once their revels have ended, goblins delight in the torment of other creatures and embrace all manner of wickedness.
-
-**Leaders and Followers.** Goblins are ruled by the strongest or smartest among them. A goblin boss might command a single lair, while a goblin king or queen (who is nothing more than a glorified goblin boss) rules hundreds of goblins, spread out among multiple lairs to ensure the tribe's survival. Goblin bosses are easily ousted, and many goblin tribes are taken over by hobgoblin warlords or bugbear chiefs.
-
-**Challenging Lairs.** Goblins festoon their lairs with alarms designed to signal the arrival of intruders. Those lairs are also riddled with narrow tunnels and bolt-holes that human-sized creatures can't navigate, but which goblins can crawl through with ease, allowing them to flee or to circle around and surprise their enemies. Rat Keepers and Wolf Riders. Goblins have an affinity for rats and wolves, raising them to serve as companions and mounts, respectively. Like rats, goblins shun sunlight and sleep underground during the day. Like wolves, they are pack hunters, made bolder by their numbers. When they hunt from the backs of wolves, goblins use hit-and-run attacks.
