--- a/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
@@ -1150,9 +1150,9 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты
 
-Выберите существо, которое вы видите в пределах досягаемости. Призрачный смычок скрипки появляется над ним и опускается вниз, пиля взад-вперед по скелету, наполняя воздух призрачной музыкой. Существо не может спрятаться, пока на него действует это заклинание. Когда вы произносите это заклинание и в конце каждого хода существа, оно должно сделать спасбросок на Конституцию. При неудачном спасброске существо получает 3к8 урона громом. При успехе спасброска действие заклинания заканчивается для этого существа, и лук исчезает.
+Выберите существо, которое вы видите в пределах досягаемости. Призрачный смычок скрипки появляется над ним и опускается вниз, пиля взад-вперед по скелету, наполняя воздух призрачной музыкой. Существо не может спрятаться, пока на него действует это заклинание. Когда вы произносите это заклинание и в конце каждого хода существа, оно должно совершить спасбросок Телосложения. При неудачном спасброске существо получает 3к8 урона громом. При успехе спасброска действие заклинания заканчивается для этого существа, и смычок исчезает.
 
-**Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 3-го уровня или выше, вы можете создать дополнительный лук скрипки, нацеленный на дополнительное существо, за каждую ячейку уровня выше 2-го.
+**Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 3-го круга или выше, вы можете создать дополнительный смычок скрипки, нацеленный на дополнительное существо, за каждую ячейку круга выше 2-го.
 
 ### Кровавая молния
 
