--- a/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-spells-part-1.mdx
@@ -8,6 +8,13 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
+**ИЗМЕНЕННЫЕ ЗАКЛИНАНИЯ:**
+
+**НОВЫЕ ЗАКЛИНАНИЯ:**
+
+
+---
+
 ### Адское возмездие
 
 1-й круг, эвокация
@@ -408,7 +415,7 @@ author: Антон "Palant" Палихов
 
 Вне зависимости от их текущих хитов, исчадие, небожитель, фея или элементаль, провалившие спасбросок, принуди¬тельно отправляются на свой родной план (если они ещё не там). Они не могут вернуться на ваш текущий план в ближайшие 24 часа любым способом, кроме закли¬нания желание.
 
-### Бойкий ЯЗЫК
+### Бойкий язык
 
 8-й круг, трансмутация
 
@@ -546,7 +553,7 @@ author: Антон "Palant" Палихов
 
 Вы сбрасываете с себя эктоплазменную оболочку, которая позволяет вам ускользнуть от опасности, когда вы вынуждены сделать спасбросок на ловкость. При неудачном спасброске вы получаете в два раза меньше урона, чем обычно. При успешном спасброске вы не получаете никакого урона, даже если обычно получаете половину. Во время сотворения этого заклинания вы также можете перемещаться на расстояние до 30 футов, не провоцируя атаки в любой момент.
 
-### ВТОРОй разум
+### Второй разум
 
 7-й круг, преграждение
 
@@ -740,7 +747,7 @@ author: Антон "Palant" Палихов
 
 Заклинание даёт десяти или менее согласным суще¬ствам, которых вы видите в пределах дистанции, способность дышать под водой, пока длится заклинание. Существа под влиянием заклинания сохраняют возмож¬ность дышать и обычным способом.
 
-### Жаждущий клинок 2
+### Жаждущий клинок
 
 2-й круг, некромантия
 
@@ -792,7 +799,7 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг.** При сотворении этого заклинания ячейкой 7-го и выше круга, круг заготовленного заклинания увеличивается на 1 за каждый круг ячейки выше 6-го.
 
-### Замок измерений 8
+### Замок измерений
 
 8-й круг, преграждение
 
@@ -840,7 +847,7 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 3-го уровня или выше, некротический урон увеличивается на 1к10 за каждую ячейку уровня выше 2-го.
 
-### Защита от нормальных снарядов
+### Защита от обычных снарядов
 
 3-й круг, преграждение
 
@@ -1116,7 +1123,6 @@ author: Антон "Palant" Палихов
 
 Вы произносите деревенскую частушку и заставляете выбранное вами существо в радиусе действия, которое может вас слышать, подхватить ее. Выбранное существо должно сделать спасбросок на мудрость. При неудачном спасброске существо получает помеху при проверке Интеллекта и не может концентрироваться на заклинаниях, так как повторяет песню снова и снова в течение всего времени действия заклинания. Затронутое существо может повторить спасбросок в конце своего хода, чтобы прекратить действие заклинания раньше.
 
-### Кожа кора
 
 ### Колесница Сустарре
 
@@ -1281,8 +1287,6 @@ author: Антон "Palant" Палихов
 Коснитесь немагического оружия. Пока заклинание не закончилось, это оружие становится магическим оружием с бонусом +1 к броскам атаки и броскам урона.
 
 **Используя более высокий круг.** Если вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, бонус увеличивается до +2. Если вы используете ячейку заклинания 6-го круга или выше, бонус увеличивается до +3.
-
-### Метка охотника
 
 ### Мнемонический усилитель
 
@@ -2252,7 +2256,7 @@ author: Антон "Palant" Палихов
 
 \* - (кусок меха; небольшой стеклянный шар и три серебряные булавки)
 
-### Шаровая молния
+### Молниевая сфера
 
 5-й круг, эвокция
 
