--- a/src/content/posts/cored20rpg/spells.mdx
+++ b/src/content/posts/cored20rpg/spells.mdx
@@ -1,11 +1,18 @@
 ---
 title: "Заклинания Core d20 RPG, версия от 27.09.2023, часть 1"
 description: "Обработанные измененные и новые заклинания в Core d20 RPG #spells #e5e #cored20rpg #dnd5e"
-date: 2023-01-01
+date: 2023-09-27
 tags:
   - Core d20 RPG
   - Заклинания
 author: Антон "Palant" Палихов
+---
+
+**ИЗМЕНЕННЫЕ ЗАКЛИНАНИЯ:**
+
+**НОВЫЕ ЗАКЛИНАНИЯ:**
+
+
 ---
 
 ### Адское возмездие
@@ -142,7 +149,7 @@ author: Антон "Palant" Палихов
 
 ### Аура жизненной силы
 
-3-й круг, призывание (лечение)
+3-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 действие.
 
@@ -408,7 +415,7 @@ author: Антон "Palant" Палихов
 
 Вне зависимости от их текущих хитов, исчадие, небожитель, фея или элементаль, провалившие спасбросок, принуди¬тельно отправляются на свой родной план (если они ещё не там). Они не могут вернуться на ваш текущий план в ближайшие 24 часа любым способом, кроме закли¬нания желание.
 
-### Бойкий ЯЗЫК
+### Бойкий язык
 
 8-й круг, трансмутация
 
@@ -526,11 +533,11 @@ author: Антон "Palant" Палихов
 
 **Дистанция:** 30 футов
 
-**Компоненты:** V
+**Компоненты:** В
 
 **Длительность:** Мгновенно
 
-Вы издаете сильный вопль, наполненный энергией, уничтожающей жизнь. Каждое существо (кроме вас самих), которое слышит этот крик, должно сделать бросок на спасбросок по Спасброску Конституции или будет уменьшено до 0 хитов. При успешном спасброске или если существо является легендарным, оно получает 10к6 психического урона.
+Вы издаете сильный вопль, наполненный энергией, уничтожающей жизнь. Каждое существо (кроме вас самих), которое слышит этот крик, должно успешно совершить спасбросок Телосложения или его хиты будут уменьшены до 0 . При успешном спасброске или если существо является легендарным, оно получает 10к6 психического урона.
 
 ### Всплеск уклонения
 
@@ -540,13 +547,13 @@ author: Антон "Palant" Палихов
 
 **Дистанция:** На себя
 
-**Компоненты:** V
+**Компоненты:** В
 
 **Длительность:** Мгновенно
 
 Вы сбрасываете с себя эктоплазменную оболочку, которая позволяет вам ускользнуть от опасности, когда вы вынуждены сделать спасбросок на ловкость. При неудачном спасброске вы получаете в два раза меньше урона, чем обычно. При успешном спасброске вы не получаете никакого урона, даже если обычно получаете половину. Во время сотворения этого заклинания вы также можете перемещаться на расстояние до 30 футов, не провоцируя атаки в любой момент.
 
-### ВТОРОй разум
+### Второй разум
 
 7-й круг, преграждение
 
@@ -740,7 +747,7 @@ author: Антон "Palant" Палихов
 
 Заклинание даёт десяти или менее согласным суще¬ствам, которых вы видите в пределах дистанции, способность дышать под водой, пока длится заклинание. Существа под влиянием заклинания сохраняют возмож¬ность дышать и обычным способом.
 
-### Жаждущий клинок 2
+### Жаждущий клинок
 
 2-й круг, некромантия
 
@@ -792,7 +799,7 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг.** При сотворении этого заклинания ячейкой 7-го и выше круга, круг заготовленного заклинания увеличивается на 1 за каждый круг ячейки выше 6-го.
 
-### Замок измерений 8
+### Замок измерений
 
 8-й круг, преграждение
 
@@ -820,7 +827,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты
 
-Личинки вгрызаются в плоть существа, к которому вы прикасаетесь. Когда вы произносите заклинание и в конце каждого своего хода во время действия заклинания, цель должна сделать Спасбросок на Конституцию или получить 10к4 некротического урона. При успешном спасброске существо получает вдвое меньше урона, и заклинание заканчивается. При успешном или неуспешном спасброске максимальное количество хит-пойнтов существа уменьшается на величину полученного некротического урона.
+Личинки вгрызаются в плоть существа, к которому вы прикасаетесь. Когда вы произносите заклинание и в конце каждого своего хода во время действия заклинания, цель должна успешно совершить спасбросок Телосложения или получить 10к4 некротического урона. При успешном спасброске существо получает вдвое меньше урона, и заклинание заканчивается. При успешном или неуспешном спасброске максимальное количество хитовсущества уменьшается на величину полученного некротического урона.
 
 **Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 4-го уровня или выше, некротический урон увеличивается на 2к4 за каждую ячейку уровня выше 3-го.
 
@@ -836,11 +843,11 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Мгновенно
 
-Вы запускаете болт холодной тьмы в существо, которое видите в пределах дистанции. Цель должна сделать спасбросок по Спасброску Конституции или получить 2к10 урона холодом и 2к10 некротического урона. При неудачном спасброске существо получает шок до конца вашего следующего хода. При успешном спасброске существо получает только урон от холода.
+Вы запускаете болт холодной тьмы в существо, которое видите в пределах дистанции. Цель должна успешно совершить спасбросок Телосложения или получить 2к10 урона холодом и 2к10 некротического урона. При неудачном спасброске существо получает шок до конца вашего следующего хода. При успешном спасброске существо получает только урон от холода.
 
 **Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 3-го уровня или выше, некротический урон увеличивается на 1к10 за каждую ячейку уровня выше 2-го.
 
-### Защита от нормальных снарядов
+### Защита от обычных снарядов
 
 3-й круг, преграждение
 
@@ -894,7 +901,7 @@ author: Антон "Palant" Палихов
 
 ### Излечение
 
-6-й круг, призывание (лечение)
+6-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 действие.
 
@@ -960,7 +967,7 @@ author: Антон "Palant" Палихов
 
 ### Исцеление ран
 
-1-й круг, призывание (лечение)
+1-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 действие.
 
@@ -976,7 +983,7 @@ author: Антон "Palant" Палихов
 
 ### Исцеляющее слово
 
-1-й круг, призывание (лечение)
+1-й круг, некромантия (лечение)
 
 **Время сотворения:** 1 бонусное действие.
 
@@ -992,7 +999,7 @@ author: Антон "Palant" Палихов
 
 ### Исцеляющий молебен
 
-2-й круг, призывание (лечение)
+2-й круг, некромантия (лечение)
 
 **Время сотворения:** 10 минут.
 
@@ -1116,7 +1123,6 @@ author: Антон "Palant" Палихов
 
 Вы произносите деревенскую частушку и заставляете выбранное вами существо в радиусе действия, которое может вас слышать, подхватить ее. Выбранное существо должно сделать спасбросок на мудрость. При неудачном спасброске существо получает помеху при проверке Интеллекта и не может концентрироваться на заклинаниях, так как повторяет песню снова и снова в течение всего времени действия заклинания. Затронутое существо может повторить спасбросок в конце своего хода, чтобы прекратить действие заклинания раньше.
 
-### Кожа кора
 
 ### Колесница Сустарре
 
@@ -1150,9 +1156,9 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты
 
-Выберите существо, которое вы видите в пределах досягаемости. Призрачный смычок скрипки появляется над ним и опускается вниз, пиля взад-вперед по скелету, наполняя воздух призрачной музыкой. Существо не может спрятаться, пока на него действует это заклинание. Когда вы произносите это заклинание и в конце каждого хода существа, оно должно сделать спасбросок на Конституцию. При неудачном спасброске существо получает 3к8 урона громом. При успехе спасброска действие заклинания заканчивается для этого существа, и лук исчезает.
+Выберите существо, которое вы видите в пределах досягаемости. Призрачный смычок скрипки появляется над ним и опускается вниз, пиля взад-вперед по скелету, наполняя воздух призрачной музыкой. Существо не может спрятаться, пока на него действует это заклинание. Когда вы произносите это заклинание и в конце каждого хода существа, оно должно совершить спасбросок Телосложения. При неудачном спасброске существо получает 3к8 урона громом. При успехе спасброска действие заклинания заканчивается для этого существа, и смычок исчезает.
 
-**Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 3-го уровня или выше, вы можете создать дополнительный лук скрипки, нацеленный на дополнительное существо, за каждую ячейку уровня выше 2-го.
+**Используя более высокий круг.** Когда вы произносите это заклинание, используя ячейку заклинания 3-го круга или выше, вы можете создать дополнительный смычок скрипки, нацеленный на дополнительное существо, за каждую ячейку круга выше 2-го.
 
 ### Кровавая молния
 
@@ -1281,8 +1287,6 @@ author: Антон "Palant" Палихов
 Коснитесь немагического оружия. Пока заклинание не закончилось, это оружие становится магическим оружием с бонусом +1 к броскам атаки и броскам урона.
 
 **Используя более высокий круг.** Если вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, бонус увеличивается до +2. Если вы используете ячейку заклинания 6-го круга или выше, бонус увеличивается до +3.
-
-### Метка охотника
 
 ### Мнемонический усилитель
 
@@ -2252,7 +2256,7 @@ author: Антон "Palant" Палихов
 
 \* - (кусок меха; небольшой стеклянный шар и три серебряные булавки)
 
-### Шаровая молния
+### Молниевая сфера
 
 5-й круг, эвокция
 
